[workspace]
members = ["rust/featuristic-core", "rust/featuristic-py"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Martin Eastwood"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
numpy = "0.21"  # Compatible with pyo3 0.21
pyo3 = { version = "0.21", features = ["extension-module"] }  # Python 3.13 support
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.8"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
